updated schedule for week of Feb 1

--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -115,6 +115,24 @@
                             <td> <a href="http://dl.acm.org/citation.cfm?id=74879"> CRC Paper </a></td>
                             <td> </td>
                           </tr>
+                          <tr>
+                            <td> Mon, Feb 1</td>
+                            <td> OO Fundamentals </td>
+                            <td> <a href="https://en.wikipedia.org/wiki/Composition_over_inheritance">Composition over Inheritance</a>, then <a href="https://en.wikipedia.org/wiki/Has-a">Has-a</a>, then <a href="https://en.wikipedia.org/wiki/Is-a">Is-a</a></td>
+                            <td> </td>
+                          </tr>
+                          <tr>
+                            <td> Wed, Feb 3</td>
+                            <td> Intro to Java </td>
+                            <td> <a href="http://dig.cs.illinois.edu/papers/lambdaRefactoring.pdf"> From Imperative To Functional Programming through Refactoring </a></td>
+                            <td> Quiz 2 (in Canvas)</td>
+                          </tr>
+                          <tr>
+                            <td> Fri, Feb 5</td>
+                            <td> Grad students pitch project ideas </td>
+                            <td> </td>
+                            <td> Battleship Milestone 1 (due at 3pm), Tracks 2 & 3 Project proposal (due at 12pm)</td>
+                          </tr>
                           </table>
                     </div>
                 </div>
