--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -52,7 +52,7 @@
                         
                         <p><b>To join the lectures synchronously, use this Zoom Meeting <a href="https://cuboulder.zoom.us/j/96158358156">https://cuboulder.zoom.us/j/96158358156</a></b>
  
-                        <li> All assignments are due on the posted dates at <b>2:59 PM</b></li>
+                        <li> Unless otherwise noted, all assignments are due on the posted dates at <b>2:59 PM</b></li>
                         <li> Please note <b>this schedule can and likely will change</b>. 
                         As the instructor for this course, I reserve the right to adjust this 
                         schedule or related assignments in any way that serves the educational 
@@ -131,7 +131,7 @@
                             <td> Fri, Feb 5</td>
                             <td> Grad students pitch project ideas </td>
                             <td> </td>
-                            <td> Battleship Milestone 1 (due at 3pm), Tracks 2 & 3 Project proposal (due at 12pm)</td>
+                            <td> Battleship Milestone 1 (due at 2:59pm), Tracks 2 & 3 Project proposal (due at 12pm)</td>
                           </tr>
                           </table>
                     </div>
