updated link to grad project proposal

--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -131,7 +131,7 @@
                             <td> Fri, Feb 5</td>
                             <td> Grad students pitch project ideas </td>
                             <td> </td>
-                            <td> Battleship Milestone 1 (due at 2:59pm), Tracks 2 & 3 Project proposal (due at 12pm)</td>
+                            <td> Battleship Milestone 1 (see Canvas, due at 2:59pm), Tracks 2 & 3 <a href="./gradProjectProposal.html">Project proposal</a> (due at 12pm)</td>
                           </tr>
                           </table>
                     </div>
