updated schedule for week of Feb 8

--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -133,6 +133,25 @@
                             <td> </td>
                             <td> Battleship Milestone 1 (see Canvas, due at 2:59pm), Tracks 2 & 3 <a href="./gradProjectProposal.html">Project proposal</a> (due at 12pm)</td>
                           </tr>
+                        <tr>
+                            <td> Mon, Feb 8</td>
+                            <td> Project Clarifications and Class Candid Conversations </td>
+                            <td> </td>
+                            <td> </td>
+                          </tr>
+                          <tr>
+                            <td> Wed, Feb 10</td>
+                            <td> UML </td>
+                            <td> <a href="https://en.wikipedia.org/wiki/Unified_Modeling_Language">Wikipedia article on UML</a>, then <a href="https://en.wikipedia.org/wiki/Class_diagram">UML Class Diagram</a>, 
+                            then <a href="https://en.wikipedia.org/wiki/Sequence_diagram">UML Sequence Diagram</a>, then <a href="https://en.wikipedia.org/wiki/Use_case_diagram">Use Case Diagram</a></td>
+                            <td> Quiz 3 (in Canvas)</td>
+                          </tr>
+                          <tr>
+                            <td> Fri, Feb 12</td>
+                            <td> TDD </td>
+                            <td> <a href="http://junit.sourceforge.net/doc/testinfected/testing.htm">JUnit Test Infected: Programmers Love Writing Tests</a></td>
+                            <td> Deadline for Grad Students to form Teams for the Grad Project</td>
+                          </tr>
                           </table>
                     </div>
                 </div>
