moved Quiz 3 to Fri

--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -144,13 +144,13 @@
                             <td> UML </td>
                             <td> <a href="https://en.wikipedia.org/wiki/Unified_Modeling_Language">Wikipedia article on UML</a>, then <a href="https://en.wikipedia.org/wiki/Class_diagram">UML Class Diagram</a>, 
                             then <a href="https://en.wikipedia.org/wiki/Sequence_diagram">UML Sequence Diagram</a>, then <a href="https://en.wikipedia.org/wiki/Use_case_diagram">Use Case Diagram</a></td>
-                            <td> Quiz 3 (in Canvas)</td>
+                            <td> </td>
                           </tr>
                           <tr>
                             <td> Fri, Feb 12</td>
                             <td> TDD </td>
                             <td> <a href="http://junit.sourceforge.net/doc/testinfected/testing.htm">JUnit Test Infected: Programmers Love Writing Tests</a></td>
-                            <td> Deadline for Grad Students to form Teams for the Grad Project</td>
+                            <td> Deadline for Grad Students to form Teams for the Grad Project. AND Quiz 3 (in Canvas).</td>
                           </tr>
                           </table>
                     </div>
