clarified the research track 3

--- a/courses/OOAD_Sp21/gradProjectProposal.html
+++ b/courses/OOAD_Sp21/gradProjectProposal.html
@@ -52,8 +52,8 @@
                         <p>We are describing below the main distinction between the Industry-novel and the Academic-novel track. 
                         The industry-novel will typically involve researching a topic that is of interest to an industry audience and synthesizing some new knowledge. 
                         For the Industry-novel track, the problem domain is relatively well understood, and the major solutions are already designed by others and available in the industry, but what is missing is a lack of knowledge about various nuances of the existing solutions.
-                        For the Academic-novel track, currently there exists no (satisfactory) solution for the problem domain. In this case the project is pushing the frontier of knowledge and invents a new solution, and then empirically validates that the proposed solution 
-                        is effective. 
+                        For the Academic-novel track, currently there exists no (satisfactory) solution for the problem domain. In this case the project is pushing the frontier of knowledge for OOAD and invents a new solution, and then empirically validates that the proposed solution 
+                        is effective. Ask yourself: is this the kind of project that leads to a research publication at OOPSLA, ICSE, or FSE, which are the main conferences advancing the state of the art in OOAD.
                         
 						<p>
                         Project ideas are due to be presented in class on Friday, 02/05. For students who cannot attend the live class,  
