--- a/courses/OOAD_Sp21/projectTracks.html
+++ b/courses/OOAD_Sp21/projectTracks.html
@@ -150,14 +150,14 @@
                         </ul>
                         
                         <h1>For Grad students -- the Academic-research Track 3</h1>
-                        <p> You must complete a term project that is research-oriented and relates to the topic of this course. 
+                        <p> You must complete a term project that is research-oriented and makes a primary contribution in the field of OOAD. 
                         The project must relate to some aspect of Software Analysis and Design (e.g., empirical study, program analysis tool, program transformation tool, code development tool, etc). 
                         You should work in teams of two or three. I will spend time in class outlining what I think 
                         are interesting and feasible projects, though you have significant freedom in shaping them how
-                        you please. The result will be a research paper that you can submit to an academic research conference. 
+                        you please. The result will be a research paper that you can submit to an academic research conference in the field of OOAD (e.g., OOPSLA, ICSE, FSE). 
                         </p>
 
-                      <h3> Examples of projects that grad students conducted in Dig's classes</h3>
+                      <h3> Examples of projects that grad students conducted in Prof Dig's classes</h3>
                       <ul>
                             <li> <a href="https://storage.googleapis.com/pub-tools-public-publication-data/pdf/72548fda518a0db8cb14a10becfee4c5763418d3.pdf">Type Migration in Ultra-Large-Scale Codebases </a> </li>
                             <li> <a href="http://dig.cs.illinois.edu/papers/UnderstandingCodeSmellsinAndroid.pdf">Understanding Code Smells in Android Applications  </a></li>
