added when things are due for the rest of the semester

--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -152,6 +152,86 @@
                             <td> <a href="http://junit.sourceforge.net/doc/testinfected/testing.htm">JUnit Test Infected: Programmers Love Writing Tests</a></td>
                             <td> Deadline for Grad Students to form Teams for the Grad Project. AND Quiz 3 (in Canvas).</td>
                           </tr>
+                          <tr>
+                            <td> Mon, Feb 15</td>
+                            <td> UML  - part 2 </td>
+                            <td> </td>
+                            <td> </td>
+                          </tr>
+                          <tr>
+                            <td> Wed, Feb 17</td>
+                            <td> No Class - Wellness Day </td>
+                            <td> </td> 
+                            <td> </td>
+                          </tr>
+                          <tr>
+                            <td> Fri, Feb 19</td>
+                            <td> Working Together: Principles and Practices (by Alan Mulally - former CEO at Boeing and Ford) </td>
+                            <td> <a href="https://www.youtube.com/watch?v=Vm6ZyRx2EbY">Working Together</a></td>
+                            <td> Battleship Game: Milestone 2 (was pushed to Sun, Feb 21).</td>
+                          </tr>
+                          <tr>
+                            <td> Fri, Feb 26</td>
+                            <td> TBA </td>
+                            <td> </td>
+                            <td> Homework 2 - UML Diagrams. Grad student Project Milestone 1.</td>
+                          </tr>
+                          <tr>
+                            <td> Fri, Mar 5</td>
+                            <td> TBA </td>
+                            <td> </td>
+                            <td> Battleship Game: Milestone 3.</td>
+                          </tr>
+                          <tr>
+                            <td> <b>Wed, Mar 10</b></td>
+                            <td> <b>Midterm</b> (during class for students attending the synchronous offering of the class, offline for others). </td>
+                            <td> </td>
+                            <td> </td>
+                          </tr>
+                          <tr>
+                            <td> Fri, Mar 12</td>
+                            <td> TBA </td>
+                            <td> </td>
+                            <td> Grad Project : Milestone 2</td>
+                          </tr>
+                          <tr>
+                            <td> Fri, Mar 19</td>
+                            <td> TBA </td>
+                            <td> </td>
+                            <td> Battleship Game: Milestone 4</td>
+                          </tr>
+                          <tr>
+                            <td> Fri, Mar 26</td>
+                            <td> Wellness Day - Inspirations for Grad School </td>
+                            <td> </td>
+                            <td> </td>
+                          </tr>  
+                        <tr>
+                            <td> Fri, Apr 2</td>
+                            <td> TBA </td>
+                            <td> </td>
+                            <td> Undergrad Milestone 5. Grad Project: Milestone 3</td>
+                          </tr>
+                          <tr>
+                            <td> Fri, Apr 9</td>
+                            <td> TBA </td>
+                            <td> </td>
+                            <td> Homework 3.</td>
+                          </tr>
+                          </tr>
+                           <tr>
+                            <td> Fri, Apr 16</td>
+                            <td> Undergrad Milestone 6</td>
+                            <td> </td>
+                            <td> </td>
+                          </tr>
+                          </tr>
+                           <tr>
+                            <td> Last week of classes</td>
+                            <td> Grad students Project Presentations </td>
+                            <td> </td>
+                            <td> Undergrad Final Project Submission and Documentation</td>
+                          </tr>
                           </table>
                     </div>
                 </div>
