added Grad Project Milestone 1

--- a/courses/OOAD_Sp21/gradProjectProposal.html
+++ b/courses/OOAD_Sp21/gradProjectProposal.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Class website for CSCI 4448/5448">
     <meta name="author" content="Danny Dig">
 
-    <title>Grad Project Proposals - CSCI 4448/5448 - Spring 2021</title>
+    <title>Grad Project Proposals - CSCI 5448 - Spring 2021</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
