--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -174,7 +174,7 @@
                             <td> Fri, Feb 26</td>
                             <td> TBA </td>
                             <td> </td>
-                            <td> Homework 2 - UML Diagrams. Grad student Project Milestone 1.</td>
+                            <td> Homework 2 - UML Diagrams. <a href="gradMilestone1.html">Grad Project Milestone 1</a>.</td>
                           </tr>
                           <tr>
                             <td> Fri, Mar 5</td>
