--- a/courses/OOAD_Sp21/gradMilestone1.html
+++ b/courses/OOAD_Sp21/gradMilestone1.html
@@ -58,7 +58,7 @@
                         <li>find at least 5 pieces of related work, e.g., by searching the ACM DL, Google scholar, books, web pages, or scanning the accepted papers of upcoming conferences (e.g., OOPSLA, ICSE, FSE). Write a short paragraph about each related work item: compare and contrast it to your research, how it is similar, but also what are its shortcomings that are addressed by your research</li>
                     </ul>
                  
-                    Use the <a href="https://www.acm.org/publications/taps/word-template-workflow" rel="nofollow">ACM SIG template</a> for preparing the document.
+                    Use the <a href="https://www.acm.org/publications/taps/word-template-workflow" rel="nofollow">ACM SIG template</a> for preparing the document. Clearing indicate the names of the people on your team.
                  </li>
                  <li>
                     You will also present in class your current progress. Cover the same points like in the previous bullet, you could even do a demo. 
