added XP readings

--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -166,8 +166,8 @@
                           </tr>
                           <tr>
                             <td> Fri, Feb 19</td>
-                            <td> Working Together: Principles and Practices (by Alan Mulally - former CEO at Boeing and Ford) </td>
-                            <td> <a href="https://www.youtube.com/watch?v=Vm6ZyRx2EbY">Working Together</a></td>
+                            <td> eXtreme Programming + <a href="https://www.youtube.com/watch?v=Vm6ZyRx2EbY">Working Together</a>: Principles and Practices (by Alan Mulally - former CEO at Boeing and Ford) </td>
+                            <td> <a href="https://en.wikipedia.org/wiki/Extreme_programming">eXtreme Programming</a> AND <a href="https://en.wikipedia.org/wiki/Extreme_programming_practices">XP Practices</a> </td>
                             <td> Battleship Game: Milestone 2 (was pushed to Sun, Feb 21).</td>
                           </tr>
                           <tr>
