updated schedule for week of Feb 22

--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -166,13 +166,25 @@
                           </tr>
                           <tr>
                             <td> Fri, Feb 19</td>
-                            <td> eXtreme Programming + <a href="https://www.youtube.com/watch?v=Vm6ZyRx2EbY">Working Together</a>: Principles and Practices (by Alan Mulally - former CEO at Boeing and Ford) </td>
-                            <td> <a href="https://en.wikipedia.org/wiki/Extreme_programming">eXtreme Programming</a> AND <a href="https://en.wikipedia.org/wiki/Extreme_programming_practices">XP Practices</a> </td>
+                            <td>  <a href="https://www.youtube.com/watch?v=Vm6ZyRx2EbY">Working Together</a>: Principles and Practices (by Alan Mulally - former CEO at Boeing and Ford) </td>
+                            <td>  </td>
                             <td> Battleship Game: Milestone 2 (was pushed to Sun, Feb 21).</td>
+                          </tr>
+                           <tr>
+                            <td> Mon, Feb 22</td>
+                            <td> eXtreme Programming (XP)</td>
+                            <td> <a href="https://en.wikipedia.org/wiki/Extreme_programming">eXtreme Programming</a> AND <a href="https://en.wikipedia.org/wiki/Extreme_programming_practices">XP Practices</a></td>
+                            <td> </td>
+                          </tr>
+                          <tr>
+                            <td> Wed, Feb 24</td>
+                            <td> Intro to Design Patterns </td>
+                            <td> Chapter 1: Intro to Design Patterns from the Texbook</td> 
+                            <td> Quiz #5</td>
                           </tr>
                           <tr>
                             <td> Fri, Feb 26</td>
-                            <td> TBA </td>
+                            <td> Grad students present their Project Topics</td>
                             <td> </td>
                             <td> Homework 2 - UML Diagrams. <a href="gradMilestone1.html">Grad Project Milestone 1</a>.</td>
                           </tr>
