updated schedule for week of march 1st

--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -189,14 +189,26 @@
                             <td> Homework 2 - UML Diagrams. <a href="gradMilestone1.html">Grad Project Milestone 1</a>.</td>
                           </tr>
                           <tr>
-                            <td> Fri, Mar 5</td>
-                            <td> TBA </td>
+                            <td> Mon, Mar 1</td>
+                            <td> Observer design pattern</td>
+                            <td> Chapter 2 (Observer) from the Texbook</td> 
                             <td> </td>
+                          </tr>
+                          <tr>
+                            <td> Wed, Mar 3</td>
+                            <td> Decorator design pattern</td>
+                            <td> Chapter 3 (Decorator) from the Texbook</td> 
+                            <td> Quiz #6</td>
+                          </tr>
+                          <tr>
+                            <td> Fri, Mar 5</td>
+                            <td> Factory design pattern </td>
+                            <td> Chapter 4 (Factory) from the Textbook</td>
                             <td> Battleship Game: Milestone 3.</td>
                           </tr>
                           <tr>
                             <td> <b>Wed, Mar 10</b></td>
-                            <td> <b>Midterm</b> (during class for students attending the synchronous offering of the class, offline for others). </td>
+                            <td> <b>Midterm</b> (during class for students attending the synchronous offering of the class, offline for 24hours for others). </td>
                             <td> </td>
                             <td> </td>
                           </tr>
