--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -201,7 +201,7 @@
                             <td> Quiz #6</td>
                           </tr>
                           <tr>
-                            <td> Fri, Mar 5</td>
+                            <td> Fri, Mar 5 (no class, watch recorded lecture)</td>
                             <td> Factory design pattern </td>
                             <td> Chapter 4 (Factory) from the Textbook</td>
                             <td> Battleship Game: Milestone 3.</td>
@@ -214,15 +214,15 @@
                           </tr>
                           <tr>
                             <td> Fri, Mar 12</td>
-                            <td> TBA </td>
+                            <td> Interview with Rebecca Wirfs-Brook </td>
                             <td> </td>
-                            <td> Grad Project : Milestone 2</td>
+                            <td> </td>
                           </tr>
                           <tr>
                             <td> Fri, Mar 19</td>
                             <td> TBA </td>
                             <td> </td>
-                            <td> Battleship Game: Milestone 4</td>
+                            <td> Battleship Game: Milestone 4. Grad Project Milestone 2.</td>
                           </tr>
                           <tr>
                             <td> Fri, Mar 26</td>
