--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -214,7 +214,7 @@
                           </tr>
                           <tr>
                             <td> Fri, Mar 12</td>
-                            <td> Interview with Rebecca Wirfs-Brook </td>
+                            <td> Interview with <a href="http://www.wirfs-brock.com/">Rebecca Wirfs-Brock</a> </td>
                             <td> </td>
                             <td> </td>
                           </tr>
