--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -201,10 +201,16 @@
                             <td> Quiz #6</td>
                           </tr>
                           <tr>
-                            <td> Fri, Mar 5 (no class, watch recorded lecture)</td>
+                            <td> Fri, Mar 5 (no class, read lecture slides)</td>
                             <td> Factory design pattern </td>
                             <td> Chapter 4 (Factory) from the Textbook</td>
                             <td> Battleship Game: Milestone 3.</td>
+                          </tr>
+                          <tr>
+                            <td> Mon, Mar 8</td>
+                            <td> Singleton design pattern</td>
+                            <td> Chapter 5 (Singleton) from the Texbook</td> 
+                            <td> </td>
                           </tr>
                           <tr>
                             <td> <b>Wed, Mar 10</b></td>
@@ -214,8 +220,8 @@
                           </tr>
                           <tr>
                             <td> Fri, Mar 12</td>
-                            <td> Interview with <a href="http://www.wirfs-brock.com/">Rebecca Wirfs-Brock</a> </td>
-                            <td> </td>
+                            <td> Interview with <a href="http://www.wirfs-brock.com/">Rebecca Wirfs-Brock</a> AND Command design pattern</td>
+                            <td> Chapter 6 (Command) from the Textbook</td>
                             <td> </td>
                           </tr>
                           <tr>
