updated with office hours

--- a/courses/OOAD_Sp21/index.html
+++ b/courses/OOAD_Sp21/index.html
@@ -76,22 +76,22 @@
                         <p>
                           <b>TA:</b> <a href="https://www.linkedin.com/in/dwightbrowne/">Dwight Browne</a><br />
                           <i>Email:</i>  Dwight.Browne [at] colorado.edu  <br />
-                          <i>Office:</i> on Zoom <br />
-                          <i>Office hours:</i> TBA<br />
+                          <i>Office:</i> on Zoom: https://cuboulder.zoom.us/j/91343768707 <br />
+                          <i>Office hours:</i> Tues 10-12 and Thu 3-5 <br />
                         </p>
                         
                          <p>
                           <b>Grader:</b> <a href="https://www.linkedin.com/in/vasu-sharma-21a509b8/">Vasu Sharma</a><br />
                           <i>Email:</i>  Vasu.Sharma [at] colorado.edu  <br />
-                          <i>Office:</i> on Zoom <br />
-                          <i>Office hours:</i> TBA<br />
+                          <i>Office:</i> on Zoom: https://cuboulder.zoom.us/j/8073355370 <br />
+                          <i>Office hours:</i> Wed 10-12, Fri 10-12 <br />
                         </p>
                         
                          <p>
                           <b>Grader:</b> <a href="https://www.linkedin.com/in/abhasprasad/">Abhas Prasad</a><br />
                           <i>Email:</i>  Abhas.Prasad [at] colorado.edu  <br />
-                          <i>Office:</i> on Zoom <br />
-                          <i>Office hours:</i> TBA<br />
+                          <i>Office:</i> on Zoom: https://cuboulder.zoom.us/j/8866887657 <br/>
+                          <i>Office hours:</i> Mon 1-3, Wed 1-3<br/>
                         </p>
 
                         <h2>Important Dates</h2>
