--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -214,19 +214,31 @@
                           </tr>
                           <tr>
                             <td> <b>Wed, Mar 10</b></td>
-                            <td> <b>Midterm</b> (during class for students attending the synchronous offering of the class, offline for 24hours for others). </td>
+                            <td> <b>Midterm</b> (available for 24 hours starting on Wed at 3pm). </td>
                             <td> </td>
                             <td> </td>
                           </tr>
                           <tr>
                             <td> Fri, Mar 12</td>
-                            <td> Interview with <a href="http://www.wirfs-brock.com/">Rebecca Wirfs-Brock</a> AND Command design pattern</td>
-                            <td> Chapter 6 (Command) from the Textbook</td>
+                            <td> Interview with <a href="http://www.wirfs-brock.com/">Rebecca Wirfs-Brock</a> </td>
+                            <td> </td>
+                            <td> </td>
+                          </tr>
+                          <tr>
+                            <td> Mon, Mar 15</td>
+                            <td> Command design pattern</td>
+                            <td> Chapter 6 (Command) from the Texbook</td> 
+                            <td> </td>
+                          </tr>
+                          <tr>
+                            <td> Wed, Mar 17</td>
+                            <td> Interview with Design Patterns legend, <a href="https://www.amazon.com/Design-Patterns-Elements-Reusable-Object-Oriented/dp/0201633612">Ralph Johnson</a> AND Adapter and Facade design patterns</td>
+                            <td> Chapter 7 (adapter/facade) from the Texbook</td> 
                             <td> </td>
                           </tr>
                           <tr>
                             <td> Fri, Mar 19</td>
-                            <td> TBA </td>
+                            <td> Grad student Milestone 2 Presentations </td>
                             <td> </td>
                             <td> Battleship Game: Milestone 4. Grad Project Milestone 2.</td>
                           </tr>
