--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -240,7 +240,7 @@
                             <td> Fri, Mar 19</td>
                             <td> Grad student Milestone 2 Presentations </td>
                             <td> </td>
-                            <td> Battleship Game: Milestone 4. <a href="gradMilestone1.html">Grad Project Milestone 2</a>.</td>
+                            <td> <a href="https://canvas.colorado.edu/courses/70627/assignments/1009699">Battleship Game: Milestone 4</a> <a href="gradMilestone2.html">Grad Project Milestone 2</a>.</td>
                           </tr>
                           <tr>
                             <td> Fri, Mar 26</td>
