updated schedule - class canceled on Monday

--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -226,21 +226,33 @@
                           </tr>
                           <tr>
                             <td> Mon, Mar 15</td>
-                            <td> Command design pattern</td>
-                            <td> Chapter 6 (Command) from the Texbook</td> 
+                            <td> Class Canceled - Campus is Closed</td>
+                            <td> Everyone stay safe through the blizzard</td> 
                             <td> </td>
                           </tr>
                           <tr>
                             <td> Wed, Mar 17</td>
-                            <td> Interview with Design Patterns legend, <a href="https://www.amazon.com/Design-Patterns-Elements-Reusable-Object-Oriented/dp/0201633612">Ralph Johnson</a> AND Adapter and Facade design patterns</td>
-                            <td> Chapter 7 (adapter/facade) from the Texbook</td> 
+                            <td> Interview with Design Patterns legend, <a href="https://www.amazon.com/Design-Patterns-Elements-Reusable-Object-Oriented/dp/0201633612">Ralph Johnson</a> AND Command design pattern</td>
+                            <td> Chapter 6 (Command) from the Texbook</td> 
                             <td> </td>
                           </tr>
                           <tr>
                             <td> Fri, Mar 19</td>
                             <td> Grad student Milestone 2 Presentations </td>
                             <td> </td>
-                            <td> <a href="https://canvas.colorado.edu/courses/70627/assignments/1009699">Battleship Game: Milestone 4</a> <a href="gradMilestone2.html">Grad Project Milestone 2</a>.</td>
+                            <td> <a href="gradMilestone2.html">Grad Project Milestone 2</a>, <a href="https://canvas.colorado.edu/courses/70627/assignments/1009699">Battleship Game: Milestone 4 - pushed to Sunday, March 21</a></td>
+                          </tr>
+                          <tr>
+                            <td> Mon, Mar 22</td>
+                            <td> Adapter and Facade Design Patterns </td>
+                            <td> Chapter 7 from the Textbook</td> 
+                            <td> </td>
+                          </tr>
+                          <tr>
+                            <td> Wed, Mar 24</td>
+                            <td> Inspirations for Grad School </td>
+                            <td> </td> 
+                            <td> </td>
                           </tr>
                           <tr>
                             <td> Fri, Mar 26</td>
