--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -240,7 +240,7 @@
                             <td> Fri, Mar 19</td>
                             <td> Grad student Milestone 2 Presentations </td>
                             <td> </td>
-                            <td> <a href="gradMilestone2.html">Grad Project Milestone 2</a>, <a href="https://canvas.colorado.edu/courses/70627/assignments/1009699">Battleship Game: Milestone 4 - pushed to Sunday, March 21</a></td>
+                            <td> <a href="gradMilestone2.html">Grad Project Milestone 2</a>. Notice that <a href="https://canvas.colorado.edu/courses/70627/assignments/1009699">Battleship Game: Milestone 4 - pushed to Sunday, March 21</a></td>
                           </tr>
                           <tr>
                             <td> Mon, Mar 22</td>
