pushed grad project M2

--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -232,20 +232,20 @@
                           </tr>
                           <tr>
                             <td> Wed, Mar 17</td>
-                            <td> Interview with Design Patterns legend, <a href="https://www.amazon.com/Design-Patterns-Elements-Reusable-Object-Oriented/dp/0201633612">Ralph Johnson</a> AND Command design pattern</td>
-                            <td> Chapter 6 (Command) from the Texbook</td> 
+                            <td> Interview with Design Patterns legend, <a href="https://www.amazon.com/Design-Patterns-Elements-Reusable-Object-Oriented/dp/0201633612">Ralph Johnson</a> </td>
+                            <td> </td> 
                             <td> </td>
                           </tr>
                           <tr>
                             <td> Fri, Mar 19</td>
-                            <td> Grad student Milestone 2 Presentations </td>
-                            <td> </td>
-                            <td> <a href="gradMilestone2.html">Grad Project Milestone 2</a>. Notice that <a href="https://canvas.colorado.edu/courses/70627/assignments/1009699">Battleship Game: Milestone 4 - pushed to Sunday, March 21</a></td>
+                            <td> Command Design Pattern </td>
+                            <td> Chapter 6 (Command) from the Texbook</td> 
+                            <td> Notice that <a href="https://canvas.colorado.edu/courses/70627/assignments/1009699">Battleship Game: Milestone 4 - pushed to Sunday, March 21</a></td>
                           </tr>
                           <tr>
                             <td> Mon, Mar 22</td>
-                            <td> Adapter and Facade Design Patterns </td>
-                            <td> Chapter 7 from the Textbook</td> 
+                            <td> Grad Project Clinics </td>
+                            <td> Bring your project to get feedback from the staff</td> 
                             <td> </td>
                           </tr>
                           <tr>
@@ -262,23 +262,22 @@
                           </tr>  
                         <tr>
                             <td> Fri, Apr 2</td>
-                            <td> TBA </td>
+                            <td> Grad student Milestone 2 Presentations </td>
                             <td> </td>
-                            <td> Undergrad Milestone 5. Grad Project: Milestone 3</td>
+                            <td> <a href="gradMilestone2.html">Grad Project Milestone 2</a>. Undergrad Milestone 5. </td>
                           </tr>
                           <tr>
                             <td> Fri, Apr 9</td>
                             <td> TBA </td>
                             <td> </td>
-                            <td> Homework 3.</td>
+                            <td> </td>
                           </tr>
-                          </tr>
+            
                            <tr>
                             <td> Fri, Apr 16</td>
-                            <td> Undergrad Milestone 6</td>
+                            <td> Grad student Milestone 3 Presentations.</td>
                             <td> </td>
-                            <td> </td>
-                          </tr>
+                            <td> Undergrad Milestone 6.</td>
                           </tr>
                            <tr>
                             <td> Last week of classes</td>
