added Final exam date

--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -285,6 +285,12 @@
                             <td> </td>
                             <td> Undergrad Final Project Submission and Documentation</td>
                           </tr>
+                          <tr>
+                            <td> Wed, May 5 at 1:30pm</td>
+                            <td> Final Exam </td>
+                            <td> </td>
+                            <td> </td>
+                          </tr>
                           </table>
                     </div>
                 </div>
