--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -256,7 +256,7 @@
                           </tr>
                           <tr>
                             <td> Fri, Mar 26</td>
-                            <td> Wellness Day - Inspirations for Grad School </td>
+                            <td> Inspirations for Career Paths</td>
                             <td> </td>
                             <td> </td>
                           </tr>  
