--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -260,11 +260,31 @@
                             <td> </td>
                             <td> </td>
                           </tr>  
+                          
+                        <tr>
+                            <td> Mon, Mar 29</td>
+                            <td> OO Design Pattern Principles</td>
+                            <td> Read on each of the <a href="https://en.wikipedia.org/wiki/SOLID">S.O.L.I.D. principles</a></td> 
+                            <td> </td>
+                          </tr>
+                          <tr>
+                            <td> Wed, Mar 31</td>
+                            <td> Refactoring </td>
+                            <td> Chapter 24 from Code Complete 2nd Edition (access the <a href="https://ucblibraries.summon.serialssolutions.com/search?s.fvf%5B%5D=ContentType%2CBook+%2F+eBook&s.fvf%5B%5D=Library%2CInternet+Access&s.q=Code+Complete#!/search?ho=t&fvf=ContentType,Book%20%2F%20eBook,f%7CLibrary,Internet%20Access,f&l=en&q=Code%20Complete
+">ebook for free from CU Libraries</a>)</td> 
+                            <td> </td>
+                          </tr>
                         <tr>
                             <td> Fri, Apr 2</td>
                             <td> Grad student Milestone 2 Presentations </td>
                             <td> </td>
-                            <td> <a href="gradMilestone2.html">Grad Project Milestone 2</a>. Undergrad Milestone 5. </td>
+                            <td> <a href="gradMilestone2.html">Grad Project Milestone 2</a> </td>
+                          </tr>
+                          <tr>
+                            <td> Mon, Apr 5</td>
+                            <td> Code Smells and Refactoring</td>
+                            <td> <a href="https://blog.codinghorror.com/code-smells/">Code Smells Blog</a></td> 
+                            <td> Undergrad Milestone 5</td>
                           </tr>
                           <tr>
                             <td> Fri, Apr 9</td>
